--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -5,12 +5,13 @@ editor_options:
   chunk_output_type: console
 format:
   html:
+    toc: true
     code-fold: true
     self-contained: false
-    toc: true
 execute: 
   cache: true
 ---
+
 
 ## Data Preparation
 
@@ -28,20 +29,6 @@ library(gt)
 options(mc.cores = parallel::detectCores(),
         brms.backend = "cmdstanr",
         width = 300)
-
-
-results_table <- function(model, effects="fixed", filter=NULL) {
-  if("marginaleffects" %in% class(model)) {
-    model |> 
-      parameters::parameters() |> 
-      as.data.frame() |> 
-      select(-Parameter, -SE, -S, z=Statistic) |> 
-      insight::format_table() |> 
-      parameters::display()
-  } else {
-    display(parameters::parameters(model, effects=effects, keep=filter))
-  }
-}
 
 ```
 
@@ -111,9 +98,104 @@ df2 <- read.csv("https://raw.githubusercontent.com/RealityBending/FictionEro/ref
 ```
 
 
+```{r}
+
+tbl_results <-   function(model1, title_table = "Fixed Effects: Study 1"){      
+                            
+  # ---- Fixed effects table ----
+  tbl <- parameters::parameters(model1, effects = "fixed") |>
+    as.data.frame() |>
+    select(-Effects, -df_error, -CI) |>
+    gt() |>
+    # tab_header(title = title_table, subtitle = subtitle_table) |>
+    fmt_number(columns = c("Coefficient", "SE", "CI_low", "CI_high", "z", "p"), decimals = 2) |>
+    cols_label(
+      Parameter = "Predictor",
+      Coefficient = "β",
+      SE = "SE",
+      CI_low = "CI (lower)",
+      CI_high = "CI (upper)",
+      z = "z-value",
+      p = "p"
+    ) |>
+    cols_merge(columns = c("CI_low", "CI_high"), pattern = "{1}, {2}") |>
+    cols_label(`CI_low` = "95% CI") |>
+    tab_style(
+      style = cell_text(weight = "bold"),
+      locations = cells_column_labels(everything())
+    ) |>
+    opt_table_lines()
+  
+    return(tbl)
+}
+
+
+make_combined_plot <- function(model1, model2 = NULL, 
+                               title = "Estimated Marginal Means") {
+  
+  df1 <- modelbased::estimate_means(
+    model1, by = c("Gender", "Relevance", "Condition", "ConditionBelief"),backend = "emmeans") |>
+    dplyr::mutate(Sample = "Study 1") |>
+    as.data.frame()
+  
+  # Study 2: only Relevant
+  if (!is.null(model2)) {
+    df2 <- modelbased::estimate_means(
+      model2, by = c("Gender", "Condition", "ConditionBelief"), backend = "emmeans") |>
+      dplyr::mutate(Relevance = "Relevant", Sample = "Study 2") |>
+      as.data.frame()
+    pred_df <- rbind(df1, df2)
+  } else {
+    pred_df <- df1
+  }
+  
+  
+  plt <- pred_df |>
+    ggplot(aes(x = ConditionBelief, y = Proportion,color = Condition, linetype = Sample, group = interaction(Sample, Condition)
+    )) +
+    geom_hline(yintercept = 0, color = "darkgrey") +
+    geom_line(size = 1) +
+    geom_point(size = 2) +
+    geom_errorbar(aes(ymin = CI_low, ymax = CI_high), width = 0.1) +
+    facet_grid(Relevance ~ Gender, switch = "y") +
+    scale_color_manual(values = c("AI-Generated" = "#2196F3","Photograph" = "#F44336")) +
+    theme_minimal(base_size = 14) +
+    labs(title = title, x= "Whether the original labels were believed to be true",color = "Images presented as:", linetype = "Sample"
+    ) +
+    theme(
+      axis.title.y = element_blank(),
+      axis.text.y = element_text(size = 8),
+      strip.placement = "outside",
+      strip.background.x = element_rect(fill = "lightgrey", color = NA),
+      strip.text.x = element_text(size = 10),
+      strip.text.y = element_text(size = 10),
+      axis.text.x = element_text(face = "bold", size = 9, color = "black"),
+      legend.text = element_text(size = 10),
+      legend.position = "bottom"
+    )
+  
+  plt
+}
+
+
+```
+
 ## Manipulation Checks
 
-### Distributions
+::: {.panel-tabset}
+
+### Rate Belief
+
+```{r ratebelief}
+
+rate1 <- table(df1$Feedback_LabelsIncorrect)["True"] / sum(table(df1$Feedback_LabelsIncorrect))
+rate2 <- table(df2$Feedback_AllReal)["True"] / sum(table(df2$Feedback_AllReal))
+
+```
+
+The rate of people that did not believe the instructions in study 1 (i.e., gave feedback that the labels were incorrect) was `r round(mean(rate1) * 100, 1)`% while in study 2 (i.e., gave feedback that all images were real images) was `r round(mean(rate2) * 100, 1)`%. 
+
+### Arousal Distributions
 
 ```{r Arousal1}
 #| fig-width: 12
@@ -147,20 +229,7 @@ arousal_dist2 <- df2 |>
 arousal_dist2
 ```
 
-### Rate Belief
-
-```{r ratebelief}
-
-rate1 <- table(df1$Feedback_LabelsIncorrect)["True"] / sum(table(df1$Feedback_LabelsIncorrect))
-rate2 <- table(df2$Feedback_AllReal)["True"] / sum(table(df2$Feedback_AllReal))
-
-```
-
-The rate of people that did not believe the instructions in study 1 (i.e., gave feedback that the labels were incorrect) was `r round(mean(rate1) * 100, 1)`% while in study 2 (i.e., gave feedback that all images were real images) was `r round(mean(rate2) * 100, 1)`%. 
-
 ### Average Arousal 
-
-#### Study 1 
 
 ```{r meanarousal 1}
 #| message: false
@@ -202,9 +271,6 @@ diff_plot1 <- dfsub1 |>
 diff_plot1
 ```
 
-`r report(ttest1, data = dfsub1)`
-
-#### Study 2 
 ```{r meanarousal 2}
 #| message: false
 
@@ -243,101 +309,35 @@ diff_plot2 <- dfsub2 |>
 diff_plot2
 ```
 
-`r report(ttest2, data = dfsub1)`
+**Study 1**: `r report::report(ttest1, data = dfsub1)`
+
+
+**Study 2**: `r report::report(ttest2, data = dfsub2)`
+
+:::
+
 
 ## Effect of Manipulation
 
-*Note*. Models for study 1 only include the conditions which were relevant to the participants sexual orientation (e.g., seeing images of men as a heterosexual woman). 
-
-```{r}
-
-tbl_results <-   function(model1, title_table = "Fixed Effects: Study 1"){      
-                            
-  # ---- Fixed effects table ----
-  tbl <- parameters::parameters(model1, effects = "fixed") |>
-    as.data.frame() |>
-    select(-Effects, -df_error, -CI) |>
-    gt() |>
-    # tab_header(title = title_table, subtitle = subtitle_table) |>
-    fmt_number(columns = c("Coefficient", "SE", "CI_low", "CI_high", "z", "p"), decimals = 2) |>
-    cols_label(
-      Parameter = "Predictor",
-      Coefficient = "β",
-      SE = "SE",
-      CI_low = "CI (lower)",
-      CI_high = "CI (upper)",
-      z = "z-value",
-      p = "p"
-    ) |>
-    cols_merge(columns = c("CI_low", "CI_high"), pattern = "{1}, {2}") |>
-    cols_label(`CI_low` = "95% CI") |>
-    tab_style(
-      style = cell_text(weight = "bold"),
-      locations = cells_column_labels(everything())
-    ) |>
-    opt_table_lines()
-  
-    return(tbl)
-}
-
-```
-
-```{r}
-make_model_plot <- function(model1, model2 = NULL, 
-                            title = "Estimated Marginal Means") {
-  
-    pred_df <- rbind(
-      modelbased::estimate_means(model1, by = c("Gender", "Relevance", "Condition", "ConditionBelief"), backend = "emmeans")  |>
-        filter(Relevance == "Relevant") |>
-        select(-Relevance) |>
-        mutate(Sample = "Study 1")|>
-      as.data.frame(), 
-      modelbased::estimate_means(model2, by = c("Gender","Condition", "ConditionBelief"), backend = "emmeans")|>
-        mutate(Sample = "Study 2") |>
-        as.data.frame()) 
-    
-    plt <- pred_df |>
-      ggplot(aes(x = ConditionBelief,y = Proportion, color = Condition,linetype = Sample, group = interaction(Sample, Condition))) +
-      geom_line(size = 1) +
-      geom_point(size = 2) +
-      geom_errorbar(aes(ymin = CI_low, ymax = CI_high),width = 0.1) +
-      facet_wrap(~ Gender) +
-      scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
-      theme_minimal(base_size = 14) +
-        labs(x = "Whether the original labels were believed to be true",y = "Estimated Proportion",color = "Images presented as:",linetype = "Sample", title = "Enticement") +
-      theme(
-            axis.text.y = element_text(size = 8),
-            strip.placement = "outside",
-            strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
-            strip.text.x = element_text(size = 10),
-            strip.text.y = element_text(size = 10),
-            axis.text.x = element_text(face = "bold", size=9, color="black"),
-            legend.text = element_text(size = 10),
-            legend.position =  )
-    
-    return(plt)
-}
-
-```
+::: {.panel-tabset}
 
 ### Arousal 
 
 ```{r}
 arousal1 <- readRDS("models/ModelArousal_1.rds")
 arousal2 <- readRDS("models/ModelArousal_2.rds")
+
+tbl_a1 <- tbl_results(arousal1, title = "Fixed Effects: Arousal Study 1")
+tbl_a1
 ```
 
 ```{r}
-
-tbl_a1 <- tbl_results(arousal1, title = "Fixed Effects: Arousal Study 1")
 tbl_a2 <- tbl_results(arousal2, title = "Fixed Effects: Arousal Study 2")
-
+tbl_a2
 ``` 
 
 ```{r}
-
-plt_a <- make_model_plot(arousal1, arousal2,
-                title = "Arousal for Relevant Stimuli")
+plta <- make_combined_plot(arousal1, arousal2, title = "Arousal Estimates for All Stimuli")
 ```
 
 ### Enticement
@@ -345,19 +345,19 @@ plt_a <- make_model_plot(arousal1, arousal2,
 ```{r}
 enticement1 <- readRDS("models/ModelEnticement_1.rds")
 enticement2 <- readRDS("models/ModelEnticement_2.rds")
+
+tbl_e1 <- tbl_results(enticement1, title = "Fixed Effects: Enticement Study 1")
+tbl_e1
 ```
 
 ```{r}
-
-tbl_e1 <- tbl_results(enticement1, title = "Fixed Effects: Enticement Study 1")
 tbl_e2 <- tbl_results(enticement2, title = "Fixed Effects: Enticement Study 2")
-
+tbl_e2
 ``` 
 
 ```{r}
-
-plt_e <- make_model_plot(enticement1, enticement2,
-                title = "Enticement for Relevant Stimuli")
+plt_e <- make_combined_plot(enticement1, enticement2, title = "Enticement Estimates for All Stimuli")
+plt_e
 ```
 
 ### Valence
@@ -365,20 +365,23 @@ plt_e <- make_model_plot(enticement1, enticement2,
 ```{r}
 valence1 <- readRDS("models/ModelValence_1.rds")
 valence2 <- readRDS("models/ModelValence_2.rds")
+
+tbl_v1 <- tbl_results(valence1, title = "Fixed Effects: Valence Study 1")
+tbl_v1
 ```
 
 ```{r}
-
-tbl_v1 <- tbl_results(valence1, title = "Fixed Effects: Valence Study 1")
 tbl_v2 <- tbl_results(valence2, title = "Fixed Effects: Valence Study 2")
-
+tbl_v2
 ``` 
 
 ```{r}
-
-plt_v <- make_model_plot(valence1, valence2,
-                title = "Valence for Relevant Stimuli")
+plt_v <- make_combined_plot(valence1, valence2, title = "Valence Estimates for All Stimuli")
+plt_v
 ```
+ 
+:::
+
 
 ## Interindividual Variability and Moderators
 
@@ -389,59 +392,7 @@ plt_v <- make_model_plot(valence1, valence2,
 
 ### Random Effects
 
-#### Arousal
-```{r}
-table_dvour <- function(g) {
-  performance::performance_dvour(g) |> 
-    arrange(desc(D_vour)) |> 
-    gt::gt() |> 
-    gt::data_color("D_vour", palette = c("red", "red", "orange", "yellow", "green"), domain = c(0, 1)) |> 
-    gt::fmt_auto()
-}
-
-a1 <- modelbased::estimate_grouplevel(arousal1)
-table_dvour(a1)
-
-a2 <- modelbased::estimate_grouplevel(arousal2)
-table_dvour(a2)
-
-```
 
 ### Participant effects
 
-```{r}
-plot_grouplevel_effects <- function(model, outcome_name = NULL) {
-  
-  # Colors
-  colors <- c("Participant" = "#9C27B0", "Item" = "#FF9800")
-  
-  # Plot
-  p <- ggplot(model, aes(x = Median, y = Level)) +
-    geom_pointrange(aes(xmin = CI_low, xmax = CI_high, color = Group), size = 0.3) +
-    ggside::geom_xsidedensity(aes(group = Group, fill = Group), color = NA, alpha = 0.3) +
-    scale_color_manual(values = colors) +
-    scale_fill_manual(values = colors) +
-    theme_minimal() +
-    theme(
-      axis.text.y = element_blank(),
-      axis.ticks.y = element_blank(),
-      axis.title.x = element_text(size = 12),
-      axis.title.y = element_blank(),
-      panel.grid.minor = element_blank(),
-      panel.grid.major.y = element_blank(),
-      legend.position = "bottom"
-    ) +
-    labs(
-      x = ifelse(is.null(outcome_name), "Random intercept (participant/item)", paste0(outcome_name, " random intercept")),
-      y = "",
-      color = "Group",
-      fill = "Group"
-    )
-  
-  return(p)
-}
-
-plot_grouplevel_effects(a1, outcome_name = "Arousal")
-
-```
 
